Fix the z-index of the cookie notice modal and the bottom cookie banner

--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -510,3 +510,8 @@ body .clearfix {
         visibility: hidden;
     }
 }
+
+.cc-revoke,
+.cc-window {
+    z-index: 999 !important;
+}
